Fix so that seek time doesn't flicker when hovering

--- a/src/components/seek_time/public/seek_time.scss
+++ b/src/components/seek_time/public/seek_time.scss
@@ -2,6 +2,7 @@
 
 .seek-time[data-seek-time] {
   position: absolute;
+  white-space: nowrap;
   width: auto;
   height: 20px;
   line-height: 20px;
